# VirtualMachine

./: CMakeLists.txt  Makefile  README.md  analyzer.c  analyzer.h  binfmt.h  cycle.c  cycle.h  definition.parser  floader.c  floader.h  function.c  function.h  instruction.c  instruction.h  loader.c  loader.h  machine.c  machine.h  machine.py  main.c  names.h  opcodes.h  operands.c  operands.h  parser.c  parser.h  print.c  print.h  stack.c  stack.h  utility.c  utility.h  writer.c  writer.h
